# mycelium

./: .agent-handoff-code-quality.md  .agent-handoff-final-commit.md  .agent-handoff-merge-phase1.md  .agent-handoff-test-validation.md  .agent-handoff-type-safety.md  .coordination-dashboard.md  .env.example  .envrc.template  .gitignore  .markdownlint.json  .markdownlint.yaml  .mdformat.toml  .mission-briefing.md  .pre-commit-config.yaml  AGENT_DESCRIPTION_COMPRESSION_REPORT.md  AGENT_STRUCTURE_CHANGE.md  CHECK_CI_NOW.sh  CI_BASELINE_REPORT.md  CI_CHECK_SUMMARY.md  CLAUDE_SKILLS_MULTI_AGENT_ANALYSIS.md  COMPRESSION_README.md  CONTRIBUTING.md  COORDINATION-SUMMARY.md  COORDINATION_DASHBOARD.md  COORDINATION_DELIVERABLES.md  COORDINATION_DISPATCH_SUMMARY.md  COORDINATION_EXECUTIVE_SUMMARY.md  COORDINATION_PLAN_PR15.md  COORDINATION_TEST_README.md  COORDINATION_TEST_REPORT.md  DEPLOYMENT_FIXES_5WHYS_ANALYSIS.md  EDGE_CASE_ANALYSIS.md  EXECUTIVE_SUMMARY.md  GIT_COMMANDS.sh  HANDOFF_PHASE1_ENVIRONMENT.md  HANDOFF_PHASE2_B904.md  HANDOFF_PHASE3_F821.md  HANDOFF_PHASES_4_TO_8.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  (+46 more)
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude/commands/: health-check.md
.github/: markdown-link-check-config.json
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml  test.yml
.mycelium/: PRIVACY.md  README.md
.mycelium/coordination/: PRELIMINARY-REPORT.md  ci-failure-investigation.md  investigation-findings.md
.mycelium/modules/: agents.md  analytics.md  coordination.md  deployment.md  onboarding.md
agents/02-language-specialists/: nextjs-developer.md  python-pro.md
agents/09-meta-orchestration/: agent-organizer.md  context-manager.md  error-coordinator.md
agents/11-claude-code/: subagent-developer.md
alembic/: README.md  env.py
alembic/versions/: 20251103_1448_45db6a6fd943_initial_schema_with_registry_and_.py  20251104_1753_cefe07c5f938_add_missing_registry_tables_and_features.py
docs/: ARCHITECTURE_DIAGRAMS.md  CI_STATUS_REPORT_PR15.md  CLAUDE_CODE_SKILLS_SYNTHESIS.md  DUAL_PURPOSE_ANALYSIS.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  PLUGIN_VERSION_SWITCHING.md  QUICK_START_IMPLEMENTATION.md  QUICK_SWITCH_GUIDE.md  SKILLS_IMPLEMENTATION_QUICKSTART.md  SKILLS_TECHNICAL_ROADMAP.md  TECHNICAL_ARCHITECTURE_SKILLS.md  ci-fix-action-plan.md  ci-local-alignment.md  ci_coordination_protocol.md  ci_status_manual_check.md  configuration-guide.md  configuration-reference.md  coordination-fix-guide.md  deployment-guide.md  deployment-integration.md  deployment-reference.md  detection-guide.md  detection-integration.md  detection-reference.md  environment-activation.md  manual-activation.md  migration-guide.md  pre-commit-ci-parity.md  quick-start-pre-commit.md  task3-team-status-update-summary.md  telemetry-configuration.md  troubleshooting-environment.md  wizard-flow-diagram.md  wizard-guide.md  wizard-integration.md  wizard-reference.md
docs/api/: discovery-api.yaml  discovery-quickstart.md  registry-api.md
docs/deployment/: POSTGRES_COMPATIBILITY.md  SPRINT3_SUMMARY.md  SPRINT4_SUMMARY.md  TEMPORAL_DEPLOYMENT.md
docs/examples/: coordination-patterns.md  infra-check.json.example  pipeline-status.sh.example  pre-test-checks.sh.example
docs/guides/: coordination-best-practices.md  discovery-coordination-quickstart.md
docs/m5/: COORDINATION_MASTER.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_PLAN.md  M5_COMPLETION_REPORT.md  TEAM1_MCP_EXECUTION_TOOLS.md  TEAM2_CONSENT_SYSTEM.md  TEAM3_ENVIRONMENT_ISOLATION.md
docs/operations/: coordination-tracking.md
docs/patterns/: dual-mode-coordination.md  markdown-coordination.md
docs/security/: AGENT_CHECKSUMS.md  CHECKSUM_IMPLEMENTATION_SUMMARY.md  TOOL_PERMISSIONS.md
docs/skills/: S1-agent-discovery-fastmcp.md  S1-agent-discovery.md  S2-coordination.md
docs/technical/: orchestration-engine.md
docs/troubleshooting/: discovery-coordination.md
examples/: migration_example.py  sample_deployment_outputs.py  secrets_example.py  smart_deployment_demo.py  xdg_paths_demo.py
examples/configs/: README.md  development.yaml  full-stack.yaml  kubernetes.yaml  minimal.yaml  postgres-only.yaml  production.yaml  redis-only.yaml  temporal-only.yaml
examples/rendered_configs/: docker-compose.yml
mycelium_analytics/: __init__.py  __main__.py  metrics.py  storage.py  telemetry.py
mycelium_onboarding/: __init__.py  __main__.py  cli.py  cli.py.modified  config_loader.py  env_validator.py  setup_direnv.py  xdg_dirs.py
mycelium_onboarding/cli_commands/: __init__.py
mycelium_onboarding/config/: __init__.py  cli_commands.py  defaults.py  loader.py  manager.py  migration_util.py  migrations.py  path_utils.py  paths.py  platform.py  precedence.py  schema.py  scope.py
plugins/: __init__.py  compression_rules.json  mycelium_core
scripts/: README_MCP_CLIENT.md  __init__.py  agent_coordinator.py  agent_discovery.py  check_ci_status.sh  check_tool_versions.py  ci_status_analyzer.py  compress_agent_descriptions.py  compress_descriptions.py  compression_quick_reference.txt  diagnose-plugin.sh  extract_doc_snippets.py  flatten-agents.sh  generate_agent_index.py  health_check.py  mcp_client.py  migrate_db.sh  quick_ci_check.sh  run_ci_check.sh  smoke_test_coordination.sh  validate-ci-local.sh  validate-task-1.1.sh  validate_ci.sh
src/mycelium/: __init__.py  (+1 more)
tests/: test_activation.py  test_agent_discovery.py  test_agent_index.py  test_benchmarks.py  test_cli_config.py  test_cli_deploy.py  test_cli_detect.py  test_cli_init.py  test_config_loader.py  test_config_manager.py  test_config_schema.py  test_database_migrations.py  test_detection_docker.py  test_detection_postgres.py  test_detection_redis.py  test_detection_temporal.py  test_env_validator.py  test_generator.py  test_gpu_detector.py  test_migrations.py  test_orchestrator.py  test_secrets.py  test_service_strategy.py  test_setup_direnv.py  test_templates.py  test_wizard_flow.py  test_wizard_flow_fixes.py  test_wizard_persistence.py  test_wizard_screens.py  test_wizard_validation.py  test_xdg_dirs.py
(+971 files in other folders)
